2022-09-23  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha08 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha08: Backflow';git push
	git tag -a 5.1.1-alpha08 -m 'all: NSB->NESB';git push --tags

	* ncremap fix bug where alg_opt=nco_idw (though not nco_dwe) was interpreted as nco_con

2022-09-22  Charlie Zender  <zender@uci.edu>

	* Change BitGroomBitRound and 'bgb' to BitGroomRound and 'bgr', respectively

	* Abbreviate BitGroom as 'btg' not 'bgr'

	* Shift NSB to NESB and/or "number of significant bits" to "number of stored bits"

2022-09-20  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha07: Cantalina';git push
	git tag -a 5.1.1-alpha07 -m 'all: ncz2psx works as intended; ncclimo sgs mdl_nm fix';git push --tags

2022-09-18  Charlie Zender  <zender@uci.edu>

	* ncclimo set mdl_nm to elm for prc_typ=sgs

2022-08-26  Charlie Zender  <zender@uci.edu>

	* Tidy nco_fl_utl.c to prepare to allow stdin filename access for all operators

	* Fix NCZarr->POSIX write issue by eliminating Lat/Lon dimensions from in_zarr4.cdl

2022-08-25  Charlie Zender  <zender@uci.edu>

	* MFOs like ncea correctly write Zarr output but not POSIX output given Zarr input

	* MFOs like ncea correctly write Zarr output and POSIX output given POSIX input

	* ncz2psx properly transforms local NCZarr-store directory names to NCZarr file:// URLs

2022-08-24  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha06: Cheney';git push
	git tag -a 5.1.1-alpha06 -m 'all: in_zarr4, nco_fl_blocksize() fix;ncclimo region_name, cell_methods';git push --tags

	* Add install rules for ncz2psx to Makefile.am, CMakeLists.txt, bld/Makefile

	* Add build rules for NCZarr files to data/Makefile.am, build in_zarr4 and symlinks

2022-08-23  Charlie Zender  <zender@uci.edu>

	* Add scalar dimension to in_zarr4.cdl to workaround NCZarr scalar bug
